--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,2 +1,141 @@
+.main {
+    margin: 0; 
+    padding: 0;
+    box-sizing: border-box;
+    display: grid;
+    flex-direction: column;
+    grid-template-columns: (3,1fr);
+    grid-gap: 10px;
+    background-color: black;
+  }
+  .content {
+    grid-column: 2;
+    display: grid;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 0;
+    padding-top: 20px;
+    margin-left: 0;
+    padding-left: 0;
+    margin-right: 300px;
+    color:white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+  }
+  .title {
+    grid-column: 2;
+    font-size: 4rem;
+    color:white
+  }
+  .logo1{
+    height: 100vh;
+  }
+
+  .logo{
+    width: 60px;
+    margin-bottom: 100px;
+  }
+  .title a {
+    color: #0070f3;
+    text-decoration: none;
+  }
+
+  .title a:hover, .title a:focus, .title a:active {
+    text-decoration: underline;
+  }
+  .content1{
+    font-size: 'verdana';
+    font-weight: bold;
+    font-size: 25px;
+  }
+
+  .modalcontainer{
+    display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  .buttonUp{
+    font-size: 13px;
+    padding-left: 65px;
+    padding-right: 65px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    justify-content: center;
+    background-color: rgb(37, 116, 219);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    font-weight: bold;
+    border-radius: 15px;
+    opacity: mouse-over;
+  }
+  .buttonIn{
+    font-size: 13px;
+    padding-left: 65px;
+    padding-right: 65px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    color: rgb(37, 116, 219);
+    border-radius: 18px;
+    border-color: white;
+  }
+  .buttonX{
+    display: flex;
+    flex-direction: row;
+    color: white;
+    font-size: bold;
+    background-color: rgba(0, 0, 0, 0.493);
+    margin: 10px;
+  }
+  .modal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(39, 38, 38);
+    color: rgba(5, 3, 3, 0.534);
+    width: 500px;
+    border-radius: 10px;
+    margin-top: 100px;
+  }
+
+  .input{
+    padding: 12px;
+    color: white;
+    font-size: bold;
+    background-color:rgba(0, 0, 0, 0.493);
+    border-radius: 10px;
+    border-color: white;
+    width: 270px;
+    margin: 7px;
+  }
+  .modalsign{
+    background-color: white;
+    color: black;
+    border-radius: 18px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 12px;
+    padding-left: 65px;
+    padding-right: 65px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    justify-content: center;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 55px;
+  }
+  .modaltitle{
+    color: white;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 23px;
+
+  }
+  .modallogo{
+      width: 60px;
+  }
+
 
 
